Ajout du tri de video par playlist
